Installed nx/next and bunch of routes
